--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+title: Executable Notebook Template
+author:
+  name: Shawn A Rhoads
+
+show_excerpts: false # set to true to show excerpts on the homepage
+
 theme: minima
