--- a/.github/workflows/binder-badge.yml
+++ b/.github/workflows/binder-badge.yml
@@ -7,7 +7,11 @@ on:
 jobs:
   badge:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
-      - uses: manics/action-binderbadge@main
+      - name: Binder Button
+        uses: manics/action-binderbadge@main
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
