--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Executable Notebook Template
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
-theme: jekyll-theme-minimal
+theme: minima
