--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -56,7 +56,8 @@ launch_buttons:
 sphinx:
   extra_extensions:   # A list of extra extensions to load by Sphinx.
   config:   # key-value pairs to directly over-ride the Sphinx configuration
-    html_theme: pydata_sphinx_theme
+    html_theme: insipid
+    html_permalinks_icon: '§'
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 latex:
