--- a/jupyter-book-env.yml
+++ b/jupyter-book-env.yml
@@ -14,8 +14,10 @@ dependencies:
   - numpy
   - matplotlib
   - seaborn
+  - nibabel=3.2.1
+  - nilearn=0.7.1
   - widgetsnbextension
   - ipywidgets
   - pip:
     - jupyter-book==0.10.2
-    - pydata_sphinx_theme
+    - insipid-sphinx-theme
