--- a/jupyter-book-env.yml
+++ b/jupyter-book-env.yml
@@ -2,6 +2,7 @@ name: jupyter-book-env
 channels:
   - default
   - conda-forge
+  - r
   - eoas_ubc
 dependencies:
   - python=3.7.*
@@ -18,6 +19,7 @@ dependencies:
   - nilearn=0.7.1
   - widgetsnbextension
   - ipywidgets
+  - r-ikernel
   - pip:
     - jupyter-book==0.10.2
     - insipid-sphinx-theme
