--- a/jupyter-book-env.yml
+++ b/jupyter-book-env.yml
@@ -19,7 +19,7 @@ dependencies:
   - nilearn=0.7.1
   - widgetsnbextension
   - ipywidgets
-  - r-ikernel
+  - r-irkernel
   - pip:
     - jupyter-book==0.10.2
     - insipid-sphinx-theme
