--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,6 +1,8 @@
 - file: index
 - file: data
+- file: preproc
 - file: study1
 - file: study2
-- file: Python
-- file: R
+- file: jupyter
+- file: python
+- file: r
