Test for deploy-book action

--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -43,6 +43,7 @@ jobs:
         conda info
         conda list
         conda activate exec-book-template
+        cp README.md docs/getting-started.md
         jupyter nbextension enable --py widgetsnbextension
         jupyter-book build docs
 
