--- a/exec-book-template.yml
+++ b/exec-book-template.yml
@@ -10,15 +10,15 @@ dependencies:
   - pip
   - runjb
   - r-irkernel
-  - pandas=1.0.4
-  - scipy=1.4.1
-  - numpy=1.18.5
-  - matplotlib=3.2.1
-  - seaborn=0.10.1
+  - pandas
+  - scipy
+  - numpy
+  - matplotlib
+  - seaborn
   - nibabel=3.2.1
   - nilearn=0.7.1
   - widgetsnbextension
-  - ipywidgets=7.6.3
+  - ipywidgets
   - pip:
     - jupyter-book==0.10.2
     - insipid-sphinx-theme; platform_system != "Windows"
