--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -56,6 +56,7 @@ launch_buttons:
 # Advanced and power-user settings
 sphinx:
   extra_extensions:   # A list of extra extensions to load by Sphinx.
+  - sphinx_inline_tabs
   config:   # key-value pairs to directly over-ride the Sphinx configuration
     html_theme: insipid
     html_permalinks_icon: '§'
